--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ The following
 $$\int_{a}^{b} x^2 dx$$
 Is an integral This word is bold. This wordis italic.
  ! \begin{align} x &amp;= 42 \end{align}
- Hint  click to hide   Hidden content     cpp Really cool snippet     var xmlHttp = new XMLHttpRequest(); xmlHttp.open( "GET", 'https:\/\/raw.githubusercontent.com\/st3inum\/cp\/master\/kmp.cpp', false ); xmlHttp.send( null ); var div = document.getElementById('code1'); div.textContent = xmlHttp.responseText;  cpp Really cool snippet     var xmlHttp = new XMLHttpRequest(); xmlHttp.
+ Hint  click to hide   Hidden content     cpp Really cool snippet     var xmlHttp = new XMLHttpRequest(); xmlHttp.open( "GET", 'https:\/\/raw.githubusercontent.com\/st3inum\/cp\/master\/kmp.cpp', false ); xmlHttp.send( null ); var div = document.getElementById('code1'); div.textContent = '\n'+xmlHttp.responseText;  cpp Really cool snippet     var xmlHttp = new XMLHttpRequest(); xmlHttp.
           
           
         </div>
